# cs184-atlas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: glad.h  stb_image.hpp
resources/shaders/: fogShader.frag  fogShader.vert  grassShader.frag  grassShader.geom  grassShader.vert  skyboxShader.vert  snowIsFalling.glsl  snowShader.frag  snowShader.vert  snowyGrassShader.geom  waterShader.frag  waterShader.vert
src/: camera.h  grassRenderer.cpp  grassRenderer.hpp  grassShader.hpp  grassTexture.cpp  grassTexture.h  loader.cpp  loader.h  main.cpp  main.h  perlin.h  shader.h  snowyGrassRenderer.cpp  snowyGrassRenderer.hpp  snowyGrassShader.hpp  waterFrameBuffer.cpp  waterRenderer.cpp  waterRenderer.hpp  waterShader.hpp
